# YARGL

./: Cargo.toml  README.md
res/css/: reset.css  style_test_1.css
res/html/: demo.html  test_1.html
src/: context.rs  css.rs  element.rs  event.rs  font.rs  html.rs  input.rs  layout.rs  lib.rs  util.rs  window.rs
tests/: staticwindow.rs
