[package]
name = "yargl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
tl = "0.7.7"
cssparser = "0.29.6"
keyframe = "1.1.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }
ttf-parser = "0.18.1"
